* Fixed vertical scroll if the calendar container overflows
* Made the timeline element be responsive to the height of each hour block

* Added menu option for each day to play with styling

--- a/frontend/css/utilities.css
+++ b/frontend/css/utilities.css
@@ -31,8 +31,8 @@ html {
 .thin-scrollbar {
     @apply overflow-hidden
 }
-.thin-scrollbar:hover {
-    @apply overflow-auto
+.thin-scrollbar {
+    @apply overflow-x-scroll
 }
 .thin-scrollbar::-webkit-scrollbar {
     width: 5px;               /* width of the entire scrollbar */
